# CFDForge-OpenFOAM-GUI-Toolkit

./: README.md  SOP.txt
Task1_Python_Tree_Package/: README.md  pyproject.toml  sample_binary.yaml  sample_cfd.yaml  sample_general.yaml
Task1_Python_Tree_Package/cfd_fossee_tree.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Task1_Python_Tree_Package/tests/: __init__.py  test_binary_tree.py  test_general_tree.py  test_traversal.py  test_validation.py  test_yaml.py
Task1_Python_Tree_Package/tree_package/: __init__.py  binary_tree.py  cli.py  config.py  exceptions.py  general_tree.py  node.py  traversal.py  validation.py  yaml_handler.py
Task2_Blender_Addon/: README.md  addon.py
